Fixed header by adding display block on the logo svg that removes extra space

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -7,6 +7,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   & &__svg-logo {
+    display: block;
     width: 100%;
     height: auto;
     fill: $color-white;
